objects/tinderbox__TinderBox_Accounts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Hold an entry for each Tinderbox Account used by this ORG</description>
    <fields>
        <fullName>tinderbox__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TB_API_Key__c</fullName>
        <label>TB API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TB_Account__c</fullName>
        <label>TB Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TB_Description__c</fullName>
        <label>TB Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TB_Host_Endpoint__c</fullName>
        <label>TB Host Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TB_Template_Id__c</fullName>
        <label>TB Template Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TB_User__c</fullName>
        <label>TB User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Tinderbox Accounts</label>
</CustomObject>